tests/src/frontend/typechecking/invalid/async_mut_1.sk
async fun no(mutable Ref<Int>): ^void {
  void
}
